Export code from JIRA